apps/goatlint/src/snapshots/_--import-plugin -A all -D no-cycle fixtures__cli__flow__@goatlint.snap
---
source: apps/goatlint/src/tester.rs
---
########## 
arguments: --import-plugin -A all -D no-cycle fixtures/cli/flow/
working directory: 
----------
Found 0 warnings and 0 errors.
Finished in <variable>ms on 2 files with 128 rules using 1 threads.
----------
CLI result: LintSucceeded
----------
