apps/goatlint/src/snapshots/_--import-plugin -A all -D no-cycle fixtures__cli__flow__@oxlint.snap
---
source: apps/goatlint/src/tester.rs
---
########## 
arguments: --import-plugin -A all -D no-cycle fixtures/cli/flow/
working directory: 
----------
Found 0 warnings and 0 errors.
Finished in <variable>ms on 2 files with 95 rules using 1 threads.
----------
CLI result: LintSucceeded
----------
